# PWGen

./: .gitignore  BACKUP_FEATURES.md  BUILD.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECRETS_MANAGEMENT.md  SECURITY.md  create-release.sh  demo_full_system.sh  pwgen.desktop  test-gui.sh  test_backup_restore.sh  test_cli.sh  test_gui.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: BUILD_OPTIMIZATION_GUIDE.md  architecture.md  getting-started.md
macos/: build-dmg.sh  build-pkg.sh  cross-compile.sh
pwgen-cli/: Cargo.toml
pwgen-cli/src/: main.rs
pwgen-core/: Cargo.toml
pwgen-core/src/: api_keys.rs  backup.rs  browser_import.rs  crypto.rs  document_storage.rs  env_connections.rs  error.rs  generator.rs  lib.rs  models.rs  notes_config.rs  secret_templates.rs  secrets.rs  secrets_storage.rs  ssh_keys.rs  storage.rs  team_sharing.rs
pwgen-gui/: Cargo.toml
pwgen-gui/src/: main.rs
pwgen-server/: Cargo.toml
pwgen-server/src/: main.rs
scripts/: install-macos.sh  install.ps1  install.sh
snap/: snapcraft.yaml
snap/local/gui/: pwgen.appdata.xml  pwgen.desktop
ui/: app-simple.js  app-v2.js  app-working.js  app.js  index.html  styles.css
website/: .gitignore  docusaurus.config.js
website/.github/workflows/: deploy.yml
website/blog/: 2024-01-15-pwgen-1.0-release.md  2024-06-27-website-launch.md  2025-06-27-pwgen-v1.2-optimized-release.md  authors.yml
website/docs/: getting-started.md  intro.md
website/docs/cli/: overview.md
website/docs/developers/: api.md  building.md  contributing.md
website/docs/getting-started/: basic-usage.md  first-run.md  installation.md
website/docs/security/: architecture.md  best-practices.md  encryption.md  reporting.md
website/docs/user-guide/: generator.md  passwords.md  secrets.md
website/src/css/: custom.css
website/src/pages/: about.js  download.js  index.js
windows/: cross-compile.sh  pwgen.nsi  pwgen.wxs
