[workspace]
resolver = "2"
members = [
    "pwgen-core",
    "pwgen-cli",
    "pwgen-gui",
    "pwgen-server"
]

[workspace.package]
version = "1.2.0"
edition = "2021"
authors = ["HxHippy", "Kief Studio", "TRaViS Team"]
license = "Apache-2.0"
repository = "https://github.com/hxhippy/pwgen"
homepage = "https://github.com/hxhippy/pwgen"
documentation = "https://docs.rs/pwgen"
description = "A modern, secure password and secrets manager built in Rust"
keywords = ["password", "security", "encryption", "secrets", "manager"]
categories = ["cryptography", "command-line-utilities", "gui"]
readme = "README.md"

[workspace.dependencies]
# Encryption and security
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
sha2 = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# GUI
egui = "0.27"
eframe = "0.27"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI utilities
rpassword = "7.3"
dirs = "5.0"


# Clipboard
arboard = "3.4"


# Document storage
hex = "0.4"
flate2 = "1.0"

# Configuration parsing
serde_yaml = "0.9"
toml = "0.8"
regex = "1.10"
url = "2.5"

# CSV parsing
csv = "1.3"


# Release optimizations for binary size
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols from binary
panic = "abort"     # Smaller panic handling

# Profile for maximum size optimization
[profile.min-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
