[package]
name = "pwgen-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/pwgen-core"
description = "Core cryptography and storage library for PwGen password manager"
keywords.workspace = true
categories.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
csv = { workspace = true }

flate2 = { version = "1.0", optional = true }

[features]
default = ["document-compression"]
document-compression = ["flate2"]