[package]
name = "pwgen-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/pwgen-gui"
description = "Desktop GUI application for PwGen password and secrets manager"
keywords.workspace = true
categories.workspace = true

[dependencies]
pwgen-core = { path = "../pwgen-core" }
egui = "0.27"
eframe = { version = "0.27", features = ["persistence"] }
png = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
dirs = { workspace = true }
chrono = { workspace = true }
arboard = { version = "3.4", optional = true }
uuid = { workspace = true }
sha2 = { workspace = true }
rfd = "0.14"
open = "5.0"

[features]
default = ["clipboard"]
clipboard = ["arboard"]
minimal = []